--- a/index.html
+++ b/index.html
@@ -34,24 +34,24 @@
 					<a href="">发现</a>
 				</li>
 				<li class="zh-nav-menu-li" id="zd-nav-menu-msg">
-					<a href="">消息<span class="arrow-down"></span></a>
+					<a href="#">消息<span class="arrow-down"></span></a>
 				</li>
 				<li class="zh-nav-menu-li" id="zd-nav-menu-user">
-					<a href="">我<span class="arrow-down"></span></a>
-					<ul class="zh-nav-user">
-						<li class="zh-nav-user-li"><a href="">我的主页</a></li>
-						<li class="zh-nav-user-li"><a href="">私信</a></li>
-						<li class="zh-nav-user-li"><a href="">设置</a></li>
-						<li class="zh-nav-user-li"><a href="">退出</a></li>
-						<li class="zh-nav-user-li">△</li>
-					</ul>
+					<a href="#">我<span class="arrow-down"></span></a>
 				</li>
+			</ul>
+			<ul class="zh-nav-user">
+				<li class="zh-nav-user-li"><a href="">我的主页</a></li>
+				<li class="zh-nav-user-li"><a href="">私信</a></li>
+				<li class="zh-nav-user-li"><a href="">设置</a></li>
+				<li class="zh-nav-user-li"><a href="">退出</a></li>
+				<li class="zh-nav-user-li"><a href="">△</a></li>
 			</ul>
 			<div class="zh-nav-msg" id="zd-nav-msg"> 
 				<div class="zh-nav-msg-sort">
-					<button class="nav-msg-sort msg-icon current" id=""><i class="sprites-b"></i></button>
-					<button class="nav-msg-sort user-icon" id=""><i class="sprites-b"></i></button>
-					<button class="nav-msg-sort thk-icon" id=""><i class="sprites-b"></i></button>
+					<button class="nav-msg-sort current" id=""><i class="sprites-b msg-icon"></i></button>
+					<button class="nav-msg-sort" id=""><i class="sprites-b user-icon"></i></button>
+					<button class="nav-msg-sort" id=""><i class="sprites-b thk-icon"></i></button>
 				</div>
 				<div class="zh-nav-msg-ctn">
 					为啥父对象高度会坍塌呢？上面也说过了，浮动元素已经脱离了普通流，父对象所在的普通流比喻成地表，
@@ -60,7 +60,7 @@
 					为啥父对象高度会坍塌呢？上面也说过了，浮动元素已经脱离了普通流，父对象所在的普通流比喻成地表，那浮动元素就已经上天了。
 				</div>
 				<div class="zh-nav-msg-set">
-					<a href=""><i class="sprites-b set-icon"></i>设置</a>
+					<a href="" class=""><i class="sprites-b set-icon"></i>设置</a>
 					<a href="">查看全部 »</a>
 				</div>
 			</div>
