--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<input id="zd-top-search-input" class="zh-top-search-input" type="text" value="" placeholder="搜索你感兴趣的内容..." />
 				<input class="zh-top-search-btn" type="submit" value="" />
 			</form>
-			<input class="zh-top-add-question" id="zd-top-add-question" type="button" value="提问" />
+			<input class="zh-top-ask-question" id="zd-top-ask-question" type="button" value="提问" />
 		</div>
 	
 		<div class="zh-nav" id="zd-nav">
@@ -45,19 +45,33 @@
 				<li class="zh-nav-user-li"><a href="">私信</a></li>
 				<li class="zh-nav-user-li"><a href="">设置</a></li>
 				<li class="zh-nav-user-li"><a href="">退出</a></li>
-				<li class="zh-nav-user-li"><a href="">△</a></li>
+				<li class="zh-nav-user-li"><a href="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;∧</a></li>
 			</ul>
 			<div class="zh-nav-msg" id="zd-nav-msg"> 
 				<div class="zh-nav-msg-sort">
-					<button class="nav-msg-sort current" id=""><i class="sprites-b msg-icon"></i></button>
-					<button class="nav-msg-sort" id=""><i class="sprites-b user-icon"></i></button>
-					<button class="nav-msg-sort" id=""><i class="sprites-b thk-icon"></i></button>
+					<button class="nav-msg-sort current" name="questions"><i class="sprites-b msg-icon"></i></button>
+					<button class="nav-msg-sort" name="users"><i class="sprites-b user-icon"></i></button>
+					<button class="nav-msg-sort" name="thanks"><i class="sprites-b thk-icon"></i></button>
 				</div>
-				<div class="zh-nav-msg-ctn">
-					为啥父对象高度会坍塌呢？上面也说过了，浮动元素已经脱离了普通流，父对象所在的普通流比喻成地表，
-				</div>
-				<div class="zh-nav-msg-ctn">
-					为啥父对象高度会坍塌呢？上面也说过了，浮动元素已经脱离了普通流，父对象所在的普通流比喻成地表，那浮动元素就已经上天了。
+				<div class="zh-nav-msg-list">
+					<div class="zh-nav-msg-ctn">
+						<a href=""  class="blue-link" name="author">周宁奕</a> 回答了 <a href=""  class="blue-link" name="question">能利用爬虫技术做到哪些很酷很有趣很有用的事情？</a>
+					</div>
+					<div class="zh-nav-msg-ctn">
+						<a href=""  class="blue-link" name="author">周宁奕</a> 回复了你在 <a href=""  class="blue-link" name="question">能利用爬虫技术做到哪些很酷很有趣很有用的事情？</a> 中 <a href="" class="blue-link" name="author">周宁奕</a> 的回答下的评论
+					</div>
+					<div class="zh-nav-msg-ctn">
+						<a href="" class="blue-link" name="author">haochuan</a> 在 <a href="" class="blue-link" name="field">_haochuan的RandomNotes</a> 中发布了 <a href="" class="blue-link" name="article">当我们说软件工程师的时候我们在说什么</a>
+					</div>
+					<div class="zh-nav-msg-ctn">
+						<a href="" class="blue-link" name="author">康石石</a> 回答了 <a href="" class="blue-link" name="question">有哪些好的网站，让人第一眼看了就怦然心动，流连忘返？</a>
+					</div>
+					<div class="zh-nav-msg-ctn">
+						<a href="" class="blue-link" name="author">康石石</a> 回复了你在 <a href="" class="blue-link" name="question">有哪些好的网站，让人第一眼看了就怦然心动，流连忘返？</a> 中 <a href="" class="blue-link" name="author">康石石</a> 的回答下的评论
+					</div>
+					<div class="zh-nav-msg-ctn">
+						<a href="" class="blue-link" name="author">张科洋</a> 回答了 <a href="" class="blue-link" name="question">关于 JavaScript 的好书有哪些？</a>
+					</div>
 				</div>
 				<div class="zh-nav-msg-set">
 					<a href="" class=""><i class="sprites-b set-icon"></i>设置</a>
@@ -75,14 +89,41 @@
 			<div class="zh-main-ctn">
 				<div class="zh-main-ctn-sort">
 					<span>来自 <a href="" class="normal">用户体验设计</a></span>
-					<a href=""><i class="zh-ctn-sort-user"></i></a>
+					<a href=""><i class="zh-ctn-sort-icon" name="dislike"></i></a>
 				</div>
 				<div class="zh-main-ctn-question">
 					<h2><a href="" class="normal">有哪些好的网站，让人第一眼看了就怦然心动，流连忘返？</a></h2>
 					<div class="zh-main-ctn-answer">
 						<div class="zh-main-ctn-author">
-							<a href="" class="normal">康石石,</a>
-							<span title="intro">艺术留学大拿</span>
+							<a href="" class="normal">康石石</a>
+							<span>，艺术留学大拿</span>
+						</div>
+						<div class="zh-main-answer-summary clearfix">
+							<img src="img/pictest001.png"/>推荐2个，一个给人耳目一新的网站浏览体验，一个是超级实用的设计灵感来源网站I Remember一个关于回忆的网站（强烈建议，亲身体验）IntroHome page所有的光斑都是用户登录网站留下的回忆，就像浩瀚银河通过鼠标，可以在回忆的银河中穿行滚动鼠标滑轮，可以…
+							<a href="" class="normal">显示全部</a>
+						</div>
+						<div class="zh-main-answer-operate">
+							<a href="" class="zh-answer-agree">869<i class="sprites-b agree-icon"></i></a>
+							<a href=""><i class="sprites-b follow-icon"></i>关注问题</a>
+							<a href=""><i class="sprites-b comment-icon"></i>9 条评论</a>
+							<span class="zh-main-answer-operate-dot">•</span>
+							<a href="">禁止转载</a>
+						</div>
+					</div>
+				</div>
+			</div>	
+			
+			<div class="zh-main-ctn">
+				<div class="zh-main-ctn-sort">
+					<span>来自 <a href="" class="normal">移动互联网产品</a></span>
+					<a href=""><i class="zh-ctn-sort-icon"></i></a>
+				</div>
+				<div class="zh-main-ctn-question">
+					<h2><a href="" class="normal">你的手机上有什么很有意思的 App？</a></h2>
+					<div class="zh-main-ctn-answer">
+						<div class="zh-main-ctn-author">
+							<a href="" class="normal">互联网杨达</a>
+							<span>，APP，互联网，广告新媒体，个人微信公众号:省略一百字，更多 app 推荐请关注「***」公众号以及官网</span>
 						</div>
 						<div class="zh-main-answer-summary clearfix">
 							<img src="img/pictest001.png"/>推荐2个，一个给人耳目一新的网站浏览体验，一个是超级实用的设计灵感来源网站I Remember一个关于回忆的网站（强烈建议，亲身体验）IntroHome page所有的光斑都是用户登录网站留下的回忆，就像浩瀚银河通过鼠标，可以在回忆的银河中穿行滚动鼠标滑轮，可以…
@@ -102,45 +143,89 @@
 			<div class="zh-main-ctn">
 				<div class="zh-main-ctn-sort">
 						<span>来自 <a href="" class="normal">海贼王</a></span>
-						<a href=""><i class="zh-ctn-sort-user"></i></a>
-					</div>
-					<div class="zh-main-ctn-question">
-						<h2><a href="" class="normal">怎么评价海贼王里的索隆？</a></h2>
-						<div class="zh-main-ctn-answer">
-							<div class="zh-main-ctn-author">
-								<a href="" class="normal">许达，</a>
-								<span title="intro">知道多一些又不会被灭口</span>
-							</div>
-							<div class="zh-main-answer-summary clearfix">
-								<img src="img/pictest.png" class="summary" />Roronoa Zoro，草帽海贼团剑士，路飞招募的第一个船员，评价Zoro我想从以下几个方面来说。一、实力索隆作为三大主力之一，毫无疑问是草帽海贼团最重要的战斗力之一，三大主力的战斗风格分别是拳头、剑和踢技。理论上，兵刃总比拳脚厉害，所以画起索隆的实力…
-								<a href="" class="normal">显示全部</a>
-							</div>
-							<div class="zh-main-answer-operate">
-								<a href="" class="zh-answer-agree">2040<i class="sprites-b agree-icon"></i></a>
-								<a href=""><i class="sprites-b follow-icon"></i>关注问题</a>
-								<a href=""><i class="sprites-b comment-icon"></i>172 条评论</a>
-								<span class="zh-main-answer-operate-dot">•</span>
-								<a href="">作者保留权利</a>
-							</div>
+						<a href=""><i class="zh-ctn-sort-icon"></i></a>
+				</div>
+				<div class="zh-main-ctn-question">
+					<h2><a href="" class="normal">怎么评价海贼王里的索隆？</a></h2>
+					<div class="zh-main-ctn-answer">
+						<div class="zh-main-ctn-author">
+							<a href="" class="normal">许达</a>
+							<span>，知道多一些又不会被灭口</span>
+						</div>
+						<div class="zh-main-answer-summary clearfix">
+							<img src="img/pictest.png" class="summary" />Roronoa Zoro，草帽海贼团剑士，路飞招募的第一个船员，评价Zoro我想从以下几个方面来说。一、实力索隆作为三大主力之一，毫无疑问是草帽海贼团最重要的战斗力之一，三大主力的战斗风格分别是拳头、剑和踢技。理论上，兵刃总比拳脚厉害，所以画起索隆的实力…
+							<a href="" class="normal">显示全部</a>
+						</div>
+						<div class="zh-main-answer-operate">
+							<a href="" class="zh-answer-agree">2040<i class="sprites-b agree-icon"></i></a>
+							<a href=""><i class="sprites-b follow-icon"></i>关注问题</a>
+							<a href=""><i class="sprites-b comment-icon"></i>172 条评论</a>
+							<span class="zh-main-answer-operate-dot">•</span>
+							<a href="">作者保留权利</a>
 						</div>
 					</div>
 				</div>
-			
-			
-			<div class="mainContent">
-				爱编程，注重用户体验，喜欢捣鼓各种有趣的东西。<br />
-				------<br />
-				“人活着到最后只有记忆才是最宝贵的！” 那些你到过的地方，相处过的人，做过的事情，就是这些记忆填满了我们的一生。<br />
-				------<br />
-				“我们在做选择的时候都不知道将来会是什么样子的，但是放心，等将来的某一天，你再回过去看，所有重要的选择都能连成一条线，前因后果。” <br />
-				------<br />
-				“成就你的，不是你的聪明才智，而是你的选择。”
-			</div>	
-			
-			<div id="footer">
-				(c) Copyright 2016 Qieguo. All Rights Reserved. 
 			</div>
+			
+			<div class="zh-main-more" id="zd-main-more">
+				更多
+			</div>
+			<footer class="zh-main-footer" id="zh-main-footer">
+				<ul class="zh-main-footer-list">
+					<li><a href=""><i class="sprites-b draft-icon"></i>我的草稿</a></li>
+					<li><a href=""><i class="sprites-b collect-icon"></i>我的收藏</a></li>
+					<li><a href=""><i class="sprites-b interest-icon"></i>我关注的问题</a></li>
+					<li><a href=""><i class="sprites-b invite-icon"></i>邀请我回答的问题</a></li>
+				</ul>
+				<ul class="zh-main-footer-list">
+					<li><a href=""><i class="sprites-b square-icon"></i>话题广场</a></li>
+					<li><a href=""><i class="sprites-b public-icon"></i>公共编辑动态</a></li>
+					<li><a href=""><i class="sprites-b com-icon"></i>社区服务中心</a></li>
+				</ul>
+				<h3>知乎专栏</h3>
+				<div class="zh-main-footer-list">
+					<a href=""><i class="sprites-c discover-icon"></i>专栏 • 发现</a>
+				</div>
+				<div class="zh-main-footer-list">
+					<a href=""><i class="sprites-c writing-icon"></i>写文章</a>
+				</div>
+			</footer>
+
+			
 		</div>
+		
+		<footer class="copyright">
+			<p>Created By <a class="blue-link" href="http://www.cnblogs.com/qieguo/">Qieguo</a>, Under MIT License</p>
+		</footer>
+		
+		<div class="zh-mask" id="zd-mask" style="display: none;">
+			<div class="zh-mask-ctn">
+				<div class="zh-mask-ctn-title">
+					<span>提问</span><i class="sprites-b cancel-icon" data-name="cancel"></i>
+				</div>
+				<form class="zh-mask-ctn-wrap" action="" method="post">
+					<textarea name="question" rows="1" cols="" placeholder="写下你的问题"></textarea>
+					<div class="zh-mask-ctn-descrip">
+						<div>问题说明(可选)</div>
+						<textarea name="question-descrip" rows="3" cols="" placeholder="问题背景、条件等详细信息"></textarea>
+					</div>
+					<div class="zh-mask-ctn-sort">
+						<div>话题分类</div>
+						<div class="zh-mask-ctn-sort-input">
+							<i class="sprites-b search-icon"></i>
+							<input type="text" value="" placeholder="搜索话题" />
+						</div>
+					</div>
+					<div class="zh-mask-ctn-operate">
+						<label for="anonymous"><input type="checkbox" name="" id="anonymous" value=""/>匿名</label>
+						<a class="blue-link" name="cancel" href="javascript:void(0);">取消</a>
+						<input type="submit" value="发布"/>
+					</div>
+				</form>
+			</div>
+			
+		</div>
+		
 		<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
