--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <link rel="shortcut icon" href="img/favicon.ico">
 		<title>Fake Zhihu</title>
 		<link rel="stylesheet" type="text/css" href="css/index.css"/>
-		
 	</head>
 	<body>
 		<div class="zh-top" id="zd-top">
@@ -223,9 +222,15 @@
 					</div>
 				</form>
 			</div>
-			
 		</div>
 		
 		<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 	</body>
+	<!--
+    	作者：茄果   http://www.cnblogs.com/qieguo/
+    	时间：2016-05-07
+    	描述：这是一个练手的项目，模仿知乎Web版本。
+    	           需要注意类和id的命名规范，这里虽然是我独立编写的，但也加了个命名空间。如果可能的话，我觉得先搭好主体设计好命名再开始写代码可能更好。
+    	 	还有就是结构方面，这次没有全盘思考过结构，所以结构还是比较凌乱的，web版其实也需要做SEO优化，这个以后再说了。
+    -->
 </html>
