--- a/draft.html
+++ b/draft.html
@@ -80,98 +80,9 @@
 		</div><!--导航设置-->
 		
 		<div class="zh-main" id="zd-main">
-			<div class="zh-main-set">
-				<h2><i class="sprites-b list-icon"></i>最新动态</h2>
-				<a href=""><i class="sprites-b set-icon"></i>设置</a>
-			</div>
-			
-			<div class="zh-main-ctn">
-				<div class="zh-main-ctn-sort">
-					<span>来自 <a href="" class="normal">用户体验设计</a></span>
-					<a href=""><i class="zh-ctn-sort-icon" name="dislike"></i></a>
-				</div>
-				<div class="zh-main-ctn-question">
-					<h2><a href="" class="normal">有哪些好的网站，让人第一眼看了就怦然心动，流连忘返？</a></h2>
-					<div class="zh-main-ctn-answer">
-						<div class="zh-main-ctn-author">
-							<a href="" class="normal">康石石</a>
-							<span>，艺术留学大拿</span>
-						</div>
-						<div class="zh-main-answer-summary clearfix">
-							<img src="img/pictest001.png"/>推荐2个，一个给人耳目一新的网站浏览体验，一个是超级实用的设计灵感来源网站I Remember一个关于回忆的网站（强烈建议，亲身体验）IntroHome page所有的光斑都是用户登录网站留下的回忆，就像浩瀚银河通过鼠标，可以在回忆的银河中穿行滚动鼠标滑轮，可以…
-							<a href="" class="normal">显示全部</a>
-						</div>
-						<div class="zh-main-answer-operate">
-							<a class="zh-answer-agree" href="" data-opt="answer-vote">869<i class="sprites-b agree-icon"></i></a>
-							<a href=""><i class="sprites-b follow-icon"></i>关注问题</a>
-							<a href=""><i class="sprites-b comment-icon"></i>9 条评论</a>
-							<span class="zh-main-answer-operate-dot">•</span>
-							<a href="">禁止转载</a>
-						</div><!--答案操作-->
-					</div><!--答案概要内容-->
-				</div><!--问题及答案-->
-			</div><!--问题分类及答案-->
-			
-			<div class="zh-main-ctn">
-				<div class="zh-main-ctn-sort">
-					<span>来自 <a href="" class="normal">移动互联网产品</a></span>
-					<a href=""><i class="zh-ctn-sort-icon"></i></a>
-				</div>
-				<div class="zh-main-ctn-question">
-					<h2><a href="" class="normal">你的手机上有什么很有意思的 App？</a></h2>
-					<div class="zh-main-ctn-answer">
-						<div class="zh-main-ctn-author">
-							<a href="" class="normal">互联网杨达</a>
-							<span>，APP，互联网，广告新媒体，个人微信公众号:省略一百字，更多 app 推荐请关注「***」公众号以及官网</span>
-						</div>
-						<div class="zh-main-answer-summary clearfix">
-							<img src="img/pictest001.png"/>推荐2个，一个给人耳目一新的网站浏览体验，一个是超级实用的设计灵感来源网站I Remember一个关于回忆的网站（强烈建议，亲身体验）IntroHome page所有的光斑都是用户登录网站留下的回忆，就像浩瀚银河通过鼠标，可以在回忆的银河中穿行滚动鼠标滑轮，可以…
-							<a href="" class="normal">显示全部</a>
-						</div>
-						<div class="zh-main-answer-operate">
-							<a href="" class="zh-answer-agree" data-opt="answer-vote">869<i class="sprites-b agree-icon"></i></a>
-							<a href=""><i class="sprites-b follow-icon"></i>关注问题</a>
-							<a href=""><i class="sprites-b comment-icon"></i>9 条评论</a>
-							<span class="zh-main-answer-operate-dot">•</span>
-							<a href="">禁止转载</a>
-						</div><!--答案操作-->
-					</div><!--答案概要内容-->
-				</div><!--问题及答案-->
-			</div><!--问题分类及答案-->
-			
-			<div class="zh-main-ctn">
-				<div class="zh-main-ctn-sort">
-						<span>来自 <a href="" class="normal">海贼王</a></span>
-						<a href=""><i class="zh-ctn-sort-icon"></i></a>
-				</div>
-				<div class="zh-main-ctn-question">
-					<h2><a href="" class="normal">怎么评价海贼王里的索隆？</a></h2>
-					<div class="zh-main-ctn-answer">
-						<div class="zh-main-ctn-author">
-							<a href="" class="normal">许达</a>
-							<span>，知道多一些又不会被灭口</span>
-						</div>
-						<div class="zh-main-answer-summary clearfix">
-							<img src="img/pictest.png" class="summary" />Roronoa Zoro，草帽海贼团剑士，路飞招募的第一个船员，评价Zoro我想从以下几个方面来说。一、实力索隆作为三大主力之一，毫无疑问是草帽海贼团最重要的战斗力之一，三大主力的战斗风格分别是拳头、剑和踢技。理论上，兵刃总比拳脚厉害，所以画起索隆的实力…
-							<a href="" class="normal">显示全部</a>
-						</div>
-						<div class="zh-main-answer-operate">
-							<a href="" class="zh-answer-agree" data-opt="answer-vote">2040<i class="sprites-b agree-icon"></i></a>
-							<a href=""><i class="sprites-b follow-icon"></i>关注问题</a>
-							<a href=""><i class="sprites-b comment-icon"></i>172 条评论</a>
-							<span class="zh-main-answer-operate-dot">•</span>
-							<a href="">作者保留权利</a>
-						</div><!--答案操作-->
-					</div><!--答案概要内容-->
-				</div><!--问题及答案-->
-			</div><!--问题分类及答案-->
-			
-			<div class="zh-main-more" id="zd-main-more">
-				更多
-			</div>
 			<footer class="zh-main-footer" id="zh-main-footer">
 				<ul class="zh-main-footer-list">
-					<li><a href="draft.html"><i class="sprites-b draft-icon"></i>我的草稿</a></li>
+					<li><a href="#"><i class="sprites-b draft-icon"></i>我的草稿</a></li>
 					<li><a href="collections.html"><i class="sprites-b collect-icon"></i>我的收藏</a></li>
 					<li><a href=""><i class="sprites-b interest-icon"></i>我关注的问题</a></li>
 					<li><a href=""><i class="sprites-b invite-icon"></i>邀请我回答的问题</a></li>
@@ -201,10 +112,10 @@
 					<span>提问</span><i class="sprites-b cancel-icon" data-opt="cancel"></i>
 				</div>
 				<form class="zh-mask-ask-wrap" action="" method="post">
-					<textarea name="question" placeholder="写下你的问题"></textarea>
+					<textarea name="question" rows="1" cols="" placeholder="写下你的问题"></textarea>
 					<div class="zh-mask-ask-descrip">
 						<div>问题说明(可选)</div>
-						<textarea name="question-descrip" placeholder="问题背景、条件等详细信息"></textarea>
+						<textarea name="question-descrip" rows="3" cols="" placeholder="问题背景、条件等详细信息"></textarea>
 					</div>
 					<div class="zh-mask-ask-sort">
 						<div>话题分类</div>
@@ -220,15 +131,6 @@
 					</div><!--匿名取消发布问题操作-->
 				</form><!--问题表单-->
 			</div><!--提问遮罩-->
-			<div class="zh-mask-vote" id="zd-mask-vote">
-				<i class="sprites-b cancel-icon-black" data-opt="cancel"></i>
-				<div class="">
-					<button class="zh-mask-vote-btn" data-opt="vote-approval"><span class="zh-msk-vote-up"></span></button>
-					<button class="zh-mask-vote-btn" data-opt="vote-oppose"><span class="zh-msk-vote-down"></span></button>
-				</div>
-				<span>赞同</span>
-				<span>反对</span>
-			</div>
 		</div><!--全屏遮罩-->
 		
 		<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
