--- a/user.html
+++ b/user.html
@@ -40,7 +40,7 @@
 				</li>
 			</ul>
 			<ul class="zh-nav-user">
-				<li class="zh-nav-user-li"><a href="user.html">我的主页</a></li>
+				<li class="zh-nav-user-li"><a href="">我的主页</a></li>
 				<li class="zh-nav-user-li"><a href="">私信</a></li>
 				<li class="zh-nav-user-li"><a href="">设置</a></li>
 				<li class="zh-nav-user-li"><a href="">退出</a></li>
@@ -80,6 +80,30 @@
 		</div><!--导航设置-->
 		
 		<div class="zh-main" id="zd-main">
+			<div class="zh-profile-info" id="zd-profile-info">
+				<h3>user</h3>
+				<div class="">
+					<img src="img/002.gif"/>
+					<ul>
+						<li>城市,行业</li>
+						<li>毕业学校</li>
+						<li>查看详细资料</li>
+					</ul>
+				</div>
+				<a href="">填写个人简介</a>
+				<div>
+					获得<i></i>999赞同<i></i>999感谢
+				</div>
+			</div>
+			<ul class="zh-profile-track" id="zd-profile-track">
+				<li>主页</li>
+				<li>提问 9</li>
+				<li>回答 99</li>
+				<li>文章 999</li>
+				<li>收藏 999</li>
+				<li>公共编辑 99</li>
+			</ul>
+			
 			<div class="zh-main-set">
 				<h2><i class="sprites-b list-icon"></i>最新动态</h2>
 				<a href=""><i class="sprites-b set-icon"></i>设置</a>
@@ -171,8 +195,8 @@
 			</div>
 			<footer class="zh-main-footer" id="zh-main-footer">
 				<ul class="zh-main-footer-list">
-					<li><a href="draft.html"><i class="sprites-b draft-icon"></i>我的草稿</a></li>
-					<li><a href="collections.html"><i class="sprites-b collect-icon"></i>我的收藏</a></li>
+					<li><a href=""><i class="sprites-b draft-icon"></i>我的草稿</a></li>
+					<li><a href=""><i class="sprites-b collect-icon"></i>我的收藏</a></li>
 					<li><a href=""><i class="sprites-b interest-icon"></i>我关注的问题</a></li>
 					<li><a href=""><i class="sprites-b invite-icon"></i>邀请我回答的问题</a></li>
 				</ul>
@@ -201,10 +225,10 @@
 					<span>提问</span><i class="sprites-b cancel-icon" data-opt="cancel"></i>
 				</div>
 				<form class="zh-mask-ask-wrap" action="" method="post">
-					<textarea name="question" placeholder="写下你的问题"></textarea>
+					<textarea name="question" rows="1" cols="" placeholder="写下你的问题"></textarea>
 					<div class="zh-mask-ask-descrip">
 						<div>问题说明(可选)</div>
-						<textarea name="question-descrip" placeholder="问题背景、条件等详细信息"></textarea>
+						<textarea name="question-descrip" rows="3" cols="" placeholder="问题背景、条件等详细信息"></textarea>
 					</div>
 					<div class="zh-mask-ask-sort">
 						<div>话题分类</div>
