--- a/topics.html
+++ b/topics.html
@@ -27,7 +27,7 @@
 					<a href="index.html">首页</a>
 				</li>
 				<li class="zh-nav-menu-li" id="zd-nav-menu-topic">
-					<a href="topics.html">话题</a>
+					<a href="">话题</a>
 				</li>
 				<li class="zh-nav-menu-li" id="zd-nav-menu-explore">
 					<a href="">发现</a>
@@ -40,7 +40,7 @@
 				</li>
 			</ul>
 			<ul class="zh-nav-user">
-				<li class="zh-nav-user-li"><a href="http://www.cnblogs.com/qieguo/">我的主页</a></li>
+				<li class="zh-nav-user-li"><a href="user.html">我的主页</a></li>
 				<li class="zh-nav-user-li"><a href="">私信</a></li>
 				<li class="zh-nav-user-li"><a href="">设置</a></li>
 				<li class="zh-nav-user-li"><a href="">退出</a></li>
@@ -81,25 +81,40 @@
 		
 		<div class="zh-main" id="zd-main">
 			<div class="zh-main-set">
-				<h2><i class="sprites-b list-icon"></i>最新动态</h2>
-				<a href=""><i class="sprites-b set-icon"></i>设置</a>
+				<h2><i class="sprites-b list-icon"></i>已关注的话题动态</h2>
+				<a class="zq-modify" href="">共关注10个话题设置</a>
 			</div>
+			<div class="zt-question-sort">
+				<span class="zt-topic-sort"><a class="blue-link" href="#">互联网</a></span>
+				<span class="zt-topic-sort"><a class="blue-link" href="#">移动互联网</a></span>
+				<span class="zt-topic-sort"><a class="blue-link" href="#">网页设计(Web Design)</a></span>
+				<span class="zt-topic-sort"><a class="blue-link" href="#">用户体验</a></span>
+				<span class="zt-topic-sort"><a class="blue-link" href="#">前端开发</a></span>
+				<span class="zt-topic-sort"><a class="blue-link" href="#">CSS</a></span>
+				<span class="zt-topic-sort"><a class="blue-link" href="#">HTML5</a></span>
+				<span class="zt-topic-sort"><a class="blue-link" href="#">JavaScript</a></span>
+				<span class="zt-topic-sort"><a class="blue-link" href="#">程序人生</a></span>
+				<span class="zt-topic-sort"><a class="blue-link" href="#">移动产品开发</a></span>
+				<a class="zq-modify" href="#"><i class="sprites-b comment-icon"></i>展开更多...</a>
+			</div>
+			
+			
 			
 			<div class="zh-main-ctn">
 				<div class="zh-main-ctn-sort">
-					<span>来自 <a href="0001.html" class="normal">用户体验设计</a></span>
+					<span>来自 <a href="" class="normal">用户体验设计</a></span>
 					<a href=""><i class="zh-ctn-sort-icon" name="dislike"></i></a>
 				</div>
 				<div class="zh-main-ctn-question">
 					<h2><a href="0001.html" class="normal">有哪些好的网站，让人第一眼看了就怦然心动，流连忘返？</a></h2>
 					<div class="zh-main-ctn-answer">
 						<div class="zh-main-ctn-author">
-							<a href="user.html" class="normal">康石石</a>
+							<a href="" class="normal">康石石</a>
 							<span class="zh-user-intro">，艺术留学大拿</span>
 						</div>
 						<div class="zh-main-answer-summary clearfix">
 							<img src="img/pictest001.png"/>推荐2个，一个给人耳目一新的网站浏览体验，一个是超级实用的设计灵感来源网站I Remember一个关于回忆的网站（强烈建议，亲身体验）IntroHome page所有的光斑都是用户登录网站留下的回忆，就像浩瀚银河通过鼠标，可以在回忆的银河中穿行滚动鼠标滑轮，可以…
-							<a href="0001.html" class="normal">显示全部</a>
+							<a href="" class="normal">显示全部</a>
 						</div>
 						<div class="zh-main-answer-operate">
 							<a class="zh-answer-agree" href="" data-opt="answer-vote">869<i class="sprites-b agree-icon"></i></a>
@@ -114,19 +129,19 @@
 			
 			<div class="zh-main-ctn">
 				<div class="zh-main-ctn-sort">
-					<span>来自 <a href="0002.html" class="normal">移动互联网产品</a></span>
+					<span>来自 <a href="" class="normal">移动互联网产品</a></span>
 					<a href=""><i class="zh-ctn-sort-icon"></i></a>
 				</div>
 				<div class="zh-main-ctn-question">
 					<h2><a href="0002.html" class="normal">你的手机上有什么很有意思的 App？</a></h2>
 					<div class="zh-main-ctn-answer">
 						<div class="zh-main-ctn-author">
-							<a href="user.html" class="normal">互联网杨达</a>
+							<a href="" class="normal">互联网杨达</a>
 							<span class="zh-user-intro">，APP，互联网，广告新媒体，个人微信公众号:省略一百字，更多 app 推荐请关注「***」公众号以及官网</span>
 						</div>
 						<div class="zh-main-answer-summary clearfix">
-							iOS里有太多愚蠢的功能设计，列举几个最典型的：1. 前置摄像头拍出的照片会自动左右颠倒大部分人脸都是左右不对称的，而我们熟悉的自己的相貌其实是镜子里左右颠倒的版本。iOS产品设计者可能觉得前置摄像头如果像镜子那样一切都是反的，该多么不严谨啊，于…
-							<a href="0002.html" class="normal">显示全部</a>
+							<img src="img/pictest001.png"/>推荐2个，一个给人耳目一新的网站浏览体验，一个是超级实用的设计灵感来源网站I Remember一个关于回忆的网站（强烈建议，亲身体验）IntroHome page所有的光斑都是用户登录网站留下的回忆，就像浩瀚银河通过鼠标，可以在回忆的银河中穿行滚动鼠标滑轮，可以…
+							<a href="" class="normal">显示全部</a>
 						</div>
 						<div class="zh-main-answer-operate">
 							<a href="" class="zh-answer-agree" data-opt="answer-vote">869<i class="sprites-b agree-icon"></i></a>
@@ -141,19 +156,19 @@
 			
 			<div class="zh-main-ctn">
 				<div class="zh-main-ctn-sort">
-						<span>来自 <a href="0003.html" class="normal">海贼王</a></span>
+						<span>来自 <a href="" class="normal">海贼王</a></span>
 						<a href=""><i class="zh-ctn-sort-icon"></i></a>
 				</div>
 				<div class="zh-main-ctn-question">
 					<h2><a href="0003.html" class="normal">怎么评价海贼王里的索隆？</a></h2>
 					<div class="zh-main-ctn-answer">
 						<div class="zh-main-ctn-author">
-							<a href="user.html" class="normal">许达</a>
+							<a href="" class="normal">许达</a>
 							<span class="zh-user-intro">，知道多一些又不会被灭口</span>
 						</div>
 						<div class="zh-main-answer-summary clearfix">
 							<img src="img/pictest.png" class="summary" />Roronoa Zoro，草帽海贼团剑士，路飞招募的第一个船员，评价Zoro我想从以下几个方面来说。一、实力索隆作为三大主力之一，毫无疑问是草帽海贼团最重要的战斗力之一，三大主力的战斗风格分别是拳头、剑和踢技。理论上，兵刃总比拳脚厉害，所以画起索隆的实力…
-							<a href="0003.html" class="normal">显示全部</a>
+							<a href="" class="normal">显示全部</a>
 						</div>
 						<div class="zh-main-answer-operate">
 							<a href="" class="zh-answer-agree" data-opt="answer-vote">2040<i class="sprites-b agree-icon"></i></a>
@@ -177,7 +192,7 @@
 					<li><a href=""><i class="sprites-b invite-icon"></i>邀请我回答的问题</a></li>
 				</ul>
 				<ul class="zh-main-footer-list">
-					<li><a href="topics.html"><i class="sprites-b square-icon"></i>话题广场</a></li>
+					<li><a href=""><i class="sprites-b square-icon"></i>话题广场</a></li>
 					<li><a href=""><i class="sprites-b public-icon"></i>公共编辑动态</a></li>
 					<li><a href=""><i class="sprites-b com-icon"></i>社区服务中心</a></li>
 				</ul>
@@ -238,6 +253,7 @@
     	时间：2016-05-07
     	描述：这是一个练手的项目，模仿知乎Web版本。
     	           需要注意类和id的命名规范，这里虽然是我独立编写的，但也加了个命名空间。如果可能的话，我觉得先搭好主体设计好命名再开始写代码可能更好。
-    	 	还有就是结构方面，这次没有全盘思考过结构，所以结构还是比较凌乱的.
+    	 	还有就是结构方面，现在没有什么经验，也没有全盘思考过结构，所以结构还是比较凌乱的。
+    	 	CSS方面本来想做成一个模块一个模块的样子，但是后面在做多页页面的时候没花什么心思，都是尽可能复用前面的样式，所以到后面非常乱。
     -->
 </html>
